--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>My Words</title><style>
-/* cspell:disable-file */
+/* cspell:disable-file tiger */
 /* webkit printing magic: print all background colors */
 html {
 	-webkit-print-color-adjust: exact;
